chore: Reusing dto (#30)