@@ -8,21 +8,21 @@ import it.gov.pagopa.pu.bff.dto.generated.TaxonomyCollectionReasonDTO;
 import it.gov.pagopa.pu.bff.dto.generated.TaxonomyMacroAreaCodeDTO;
 import it.gov.pagopa.pu.bff.dto.generated.TaxonomyOrganizationTypeDTO;
 import it.gov.pagopa.pu.bff.dto.generated.TaxonomyServiceTypeCodeDTO;
-import it.gov.pagopa.pu.bff.mapper.TaxonomyCodeMapper;
-import it.gov.pagopa.pu.bff.mapper.TaxonomyCollectionReasonMapper;
-import it.gov.pagopa.pu.bff.mapper.TaxonomyMacroAreaCodeMapper;
-import it.gov.pagopa.pu.bff.mapper.TaxonomyOrganizationTypeMapper;
-import it.gov.pagopa.pu.bff.mapper.TaxonomyServiceTypeCodeMapper;
-import it.gov.pagopa.pu.p4pa_organization.dto.generated.CollectionModelTaxonomyCodeDTO;
-import it.gov.pagopa.pu.p4pa_organization.dto.generated.CollectionModelTaxonomyCodeDTOEmbedded;
-import it.gov.pagopa.pu.p4pa_organization.dto.generated.CollectionModelTaxonomyCollectionReasonDTO;
-import it.gov.pagopa.pu.p4pa_organization.dto.generated.CollectionModelTaxonomyCollectionReasonDTOEmbedded;
-import it.gov.pagopa.pu.p4pa_organization.dto.generated.CollectionModelTaxonomyMacroAreaCodeDTO;
-import it.gov.pagopa.pu.p4pa_organization.dto.generated.CollectionModelTaxonomyMacroAreaCodeDTOEmbedded;
-import it.gov.pagopa.pu.p4pa_organization.dto.generated.CollectionModelTaxonomyOrganizationTypeDTO;
-import it.gov.pagopa.pu.p4pa_organization.dto.generated.CollectionModelTaxonomyOrganizationTypeDTOEmbedded;
-import it.gov.pagopa.pu.p4pa_organization.dto.generated.CollectionModelTaxonomyServiceTypeCodeDTO;
-import it.gov.pagopa.pu.p4pa_organization.dto.generated.CollectionModelTaxonomyServiceTypeCodeDTOEmbedded;
+import it.gov.pagopa.pu.bff.mapper.taxonomy.TaxonomyCodeMapper;
+import it.gov.pagopa.pu.bff.mapper.taxonomy.TaxonomyCollectionReasonMapper;
+import it.gov.pagopa.pu.bff.mapper.taxonomy.TaxonomyMacroAreaCodeMapper;
+import it.gov.pagopa.pu.bff.mapper.taxonomy.TaxonomyOrganizationTypeMapper;
+import it.gov.pagopa.pu.bff.mapper.taxonomy.TaxonomyServiceTypeCodeMapper;
+import it.gov.pagopa.pu.organization.dto.generated.CollectionModelTaxonomyCodeDTO;
+import it.gov.pagopa.pu.organization.dto.generated.CollectionModelTaxonomyCodeDTOEmbedded;
+import it.gov.pagopa.pu.organization.dto.generated.CollectionModelTaxonomyCollectionReasonDTO;
+import it.gov.pagopa.pu.organization.dto.generated.CollectionModelTaxonomyCollectionReasonDTOEmbedded;
+import it.gov.pagopa.pu.organization.dto.generated.CollectionModelTaxonomyMacroAreaCodeDTO;
+import it.gov.pagopa.pu.organization.dto.generated.CollectionModelTaxonomyMacroAreaCodeDTOEmbedded;
+import it.gov.pagopa.pu.organization.dto.generated.CollectionModelTaxonomyOrganizationTypeDTO;
+import it.gov.pagopa.pu.organization.dto.generated.CollectionModelTaxonomyOrganizationTypeDTOEmbedded;
+import it.gov.pagopa.pu.organization.dto.generated.CollectionModelTaxonomyServiceTypeCodeDTO;
+import it.gov.pagopa.pu.organization.dto.generated.CollectionModelTaxonomyServiceTypeCodeDTOEmbedded;
 import java.util.List;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -53,7 +53,7 @@ class TaxonomyServiceImplTest {
     CollectionModelTaxonomyCodeDTO taxonomyCodeDTO = new CollectionModelTaxonomyCodeDTO();
     CollectionModelTaxonomyCodeDTOEmbedded collectionModelTaxonomyCodeDTOEmbedded = new CollectionModelTaxonomyCodeDTOEmbedded();
 
-    var inputDTO = new it.gov.pagopa.pu.p4pa_organization.dto.generated.TaxonomyCodeDTO();
+    var inputDTO = new it.gov.pagopa.pu.organization.dto.generated.TaxonomyCodeDTO();
     var outputDTO = new TaxonomyCodeDTO();
 
     collectionModelTaxonomyCodeDTOEmbedded.addTaxonomyCodeDTOesItem(inputDTO);
@@ -68,7 +68,7 @@ class TaxonomyServiceImplTest {
 
     // Assert the result
     assertEquals(1, result.size());
-    assertEquals(outputDTO, result.get(0));
+    assertEquals(outputDTO, result.getFirst());
   }
 
   @Test
@@ -77,7 +77,7 @@ class TaxonomyServiceImplTest {
     CollectionModelTaxonomyServiceTypeCodeDTO collectionModelTaxonomyServiceTypeCodeDTO = new CollectionModelTaxonomyServiceTypeCodeDTO();
     CollectionModelTaxonomyServiceTypeCodeDTOEmbedded collectionModelTaxonomyServiceTypeCodeDTOEmbedded = new CollectionModelTaxonomyServiceTypeCodeDTOEmbedded();
 
-    var inputDTO = new it.gov.pagopa.pu.p4pa_organization.dto.generated.TaxonomyServiceTypeCodeDTO();
+    var inputDTO = new it.gov.pagopa.pu.organization.dto.generated.TaxonomyServiceTypeCodeDTO();
     var outputDTO = new TaxonomyServiceTypeCodeDTO();
 
     collectionModelTaxonomyServiceTypeCodeDTOEmbedded.addTaxonomyServiceTypeCodeDTOesItem(inputDTO);
@@ -92,7 +92,7 @@ class TaxonomyServiceImplTest {
 
     // Assert the result
     assertEquals(1, result.size());
-    assertEquals(outputDTO, result.get(0));
+    assertEquals(outputDTO, result.getFirst());
   }
 
   @Test
@@ -101,7 +101,7 @@ class TaxonomyServiceImplTest {
     CollectionModelTaxonomyOrganizationTypeDTO collectionModelTaxonomyOrganizationTypeDTO = new CollectionModelTaxonomyOrganizationTypeDTO();
     CollectionModelTaxonomyOrganizationTypeDTOEmbedded collectionModelTaxonomyOrganizationTypeDTOEmbedded = new CollectionModelTaxonomyOrganizationTypeDTOEmbedded();
 
-    var inputDTO = new it.gov.pagopa.pu.p4pa_organization.dto.generated.TaxonomyOrganizationTypeDTO();
+    var inputDTO = new it.gov.pagopa.pu.organization.dto.generated.TaxonomyOrganizationTypeDTO();
     var outputDTO = new TaxonomyOrganizationTypeDTO();
 
     collectionModelTaxonomyOrganizationTypeDTOEmbedded.addTaxonomyOrganizationTypeDTOesItem(inputDTO);
@@ -116,7 +116,7 @@ class TaxonomyServiceImplTest {
 
     // Assert the result
     assertEquals(1, result.size());
-    assertEquals(outputDTO, result.get(0));
+    assertEquals(outputDTO, result.getFirst());
   }
 
   @Test
@@ -125,7 +125,7 @@ class TaxonomyServiceImplTest {
     CollectionModelTaxonomyMacroAreaCodeDTO collectionModelTaxonomyMacroAreaCodeDTO = new CollectionModelTaxonomyMacroAreaCodeDTO();
     CollectionModelTaxonomyMacroAreaCodeDTOEmbedded collectionModelTaxonomyMacroAreaCodeDTOEmbedded = new CollectionModelTaxonomyMacroAreaCodeDTOEmbedded();
 
-    var inputDTO = new it.gov.pagopa.pu.p4pa_organization.dto.generated.TaxonomyMacroAreaCodeDTO();
+    var inputDTO = new it.gov.pagopa.pu.organization.dto.generated.TaxonomyMacroAreaCodeDTO();
     var outputDTO = new TaxonomyMacroAreaCodeDTO();
 
     collectionModelTaxonomyMacroAreaCodeDTOEmbedded.addTaxonomyMacroAreaCodeDTOesItem(inputDTO);
@@ -140,7 +140,7 @@ class TaxonomyServiceImplTest {
 
     // Assert the result
     assertEquals(1, result.size());
-    assertEquals(outputDTO, result.get(0));
+    assertEquals(outputDTO, result.getFirst());
   }
 
   @Test
@@ -149,7 +149,7 @@ class TaxonomyServiceImplTest {
     CollectionModelTaxonomyCollectionReasonDTO collectionModelTaxonomyCollectionReasonDTO = new CollectionModelTaxonomyCollectionReasonDTO();
     CollectionModelTaxonomyCollectionReasonDTOEmbedded collectionModelTaxonomyCollectionReasonDTOEmbedded = new CollectionModelTaxonomyCollectionReasonDTOEmbedded();
 
-    var inputDTO = new it.gov.pagopa.pu.p4pa_organization.dto.generated.TaxonomyCollectionReasonDTO();
+    var inputDTO = new it.gov.pagopa.pu.organization.dto.generated.TaxonomyCollectionReasonDTO();
     var outputDTO = new TaxonomyCollectionReasonDTO();
 
     collectionModelTaxonomyCollectionReasonDTOEmbedded.addTaxonomyCollectionReasonDTOesItem(inputDTO);
@@ -164,7 +164,7 @@ class TaxonomyServiceImplTest {
 
     // Assert the result
     assertEquals(1, result.size());
-    assertEquals(outputDTO, result.get(0));
+    assertEquals(outputDTO, result.getFirst());
   }
 
 }
